2011-12-21
* speedups in creation of temporary strings cache, which reduces runtime
vastly.

2011-12-20
* avoid duplicated rows in the strings cache database for ranking. This can
save quite a bit of space.

2011-12-19
* for each file first determine it is a valid XML file, so other methods no
longer need to scan it. This is especially to prevent the ranking method from
scanning these files.
* add yet another squashfs+lzma variant to bat-extratools

2011-12-18
* rework extraction of ELF sections from ELF binaries. Just using 'strings'
got too many strings. The previous version of the extraction of the right
sections (using readelf -p) did not work, because readelf -p ate leading tabs
and converted them into spaces, so sometimes some strings were not matched
properly. Now we first cut the right ELF sections from the binary, then use
strings on the temporary binary, which gives much better results.

2011-12-17
* filter out scans we don't need to run anyway, removing the need to
dynamically load and eval() the code
* big file improvements for ICO scanning
* rework unpack scans: no longer return offsets, since only one of the prerun
scans scans for/alters those.
* ranking: if none of the strings we have for gains is significant enough we
should stop processing
* ranking: fix bug where only one result per string was fetched, which led to
vastly incorrect results.

2011-12-15
* big file improvements for squashfs, ARJ and ar
* simple scanner that looks for presence of strings that might indicate the
code was from a forge, like sourceforge or code.google.com. In the future it
might be good to use the scanner from FOSSology for this.
* very simplistic scanner for scanning for a few license identifiers. This is
*not* meant to obtain proof that a program is under GPL, just as an indicator
for further investigation.

2011-12-14
* big file improvements for lzma, serialized Java, RAR and ZIP
* replace using output of libmagic for determining device files, sockets, etc.